--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "node index.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "keywords": [],
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "youtube-dl-exec": "^2.1.4"
+  },
+  "engines": {
+    "node": "14.16.1"
   }
 }
