--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "js-file-download": "^0.4.12",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.4",
+    "socket.io-client": "^4.5.1",
     "tsparticles": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
